# pharmaos-workspace/pharmaos-source/Pharma-POS-Manager/artifacts/api-server/src/routes/index.ts
@@ -6,6 +6,7 @@ import dashboardRouter from "./dashboard";
 import messagesRouter from "./messages";
 import authRouter from "./auth";
 import adminRouter from "./admin";
+import adminSettingsRouter from "./admin-settings";
 import staffRouter from "./staff";
 import checkoutsRouter from "./checkouts";
 import paymentsRouter from "./payments";
@@ -18,6 +19,7 @@ router.use("/auth", authRouter);
 router.use("/payments", paymentsRouter);
 router.use("/messages", messagesRouter);
 router.use(requireAuth);
+router.use("/admin/settings", adminSettingsRouter);
 router.use("/admin", adminRouter);
 router.use("/staff", staffRouter);
 router.use("/products", productsRouter);
